--- a/app/views/exercises/edit.html.erb
+++ b/app/views/exercises/edit.html.erb
@@ -1,18 +1,28 @@
+<div class="title-container">
+  <h1>Edit Exercise</h1>
+</div>
+
 <%= form_for @exercise, url: {action: "update"} do |f| %>
-  <%= f.label :exercise %>
-  <%= f.text_field :name %>
-  <%= f.select(:day, options_for_select(
-    [
-      ['Monday', 1],
-      ['Tuesday', 2],
-      ['Wednesday', 3],
-      ['Thursday', 4],
-      ['Friday', 5],
-      ['Saturday', 6],
-      ['Sunday', 7]
-    ]
-  )) %>
-  <%= f.submit "Update" %>
+  <div class="form-group">
+    <%= f.label :exercise %>
+    <%= f.text_field :name, class:"form-control"%>
+  </div>
+  <div class="form-group">
+    <%= f.select(:day, options_for_select(
+      [
+        ['Monday', 1],
+        ['Tuesday', 2],
+        ['Wednesday', 3],
+        ['Thursday', 4],
+        ['Friday', 5],
+        ['Saturday', 6],
+        ['Sunday', 7]
+      ]
+    )) %>
+  </div>
+  <div class="actions">
+    <%= f.submit "Update", class:"btn btn-primary" %>
+    <%= link_to "delete", exercise_path, method: :delete, class:"btn btn-warning" %>
+  </div>
 <% end %>
 
-<%= link_to "delete", exercise_path, method: :delete %>
