--- a/app/views/exercises/new.html.erb
+++ b/app/views/exercises/new.html.erb
@@ -1,16 +1,27 @@
+<div class="title-container">
+  <h1>New Exercise</h1>
+</div>
+
 <%= form_for @exercise, url: {action: "create"} do |f| %>
-  <%= f.label :exercise %>
-  <%= f.text_field :name %>
-  <%= f.select(:day, options_for_select(
-    [
-      ['Monday', 1],
-      ['Tuesday', 2],
-      ['Wednesday', 3],
-      ['Thursday', 4],
-      ['Friday', 5],
-      ['Saturday', 6],
-      ['Sunday', 7]
-    ]
-  )) %>
-  <%= f.submit "Create" %>
+  <div class="form-group">
+    <%= f.label :exercise %>
+    <%= f.text_field :name, class:"form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.select(:day, options_for_select(
+      [
+        ['Monday', 1],
+        ['Tuesday', 2],
+        ['Wednesday', 3],
+        ['Thursday', 4],
+        ['Friday', 5],
+        ['Saturday', 6],
+        ['Sunday', 7]
+      ]
+    )) %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit "Create", class:"btn btn-primary" %>
+  </div>
 <% end %>
